[gd_scene load_steps=2 format=2]

[ext_resource path="res://weapons/melee/MeleeWeapon.gd" type="Script" id=1]

[node name="MeleeWeapon" type="Node2D"]
z_index = 20
script = ExtResource( 1 )

[node name="ColdTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="ColdTimer" to="." method="_on_ColdTimer_timeout"]
